# pj-memory

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_ja.md  SKILLS_README.md  TODOS.md  pyproject.toml  test_skills.py
.nfd/: config.json
docs/: api-reference.md  cli-reference.md  configuration.md  dashboard-guide.md  design-v0.2.0.md  embedding-providers.md  log-format.md  quickstart.md
memory/: MEMORY.md  error-patterns.md  insights.md  skill-updates.json
memory/contexts/: 2026-04-04.md  2026-04-05.md
memory/logs/: 2026-04-04.md  2026-04-05.md
src/cognitive_memory/: __init__.py  config.py  context.py  decay.py  gate.py  identity.py  insights.py  parser.py  scoring.py  search.py  signals.py  store.py  types.py  watch.py  wrap_lock.py
tests/: conftest.py  test_cli.py  test_cli_identity.py  test_config.py  test_context.py  test_context_fencing.py  test_decay.py  test_deja_vu_search.py  test_gate.py  test_hook.py  test_identity.py  test_identity_integration.py  test_index_reembed.py  test_init_migrate_integration.py  test_insights.py  test_lang_autodetect.py  test_lang_persistence.py  test_memory_pipeline.py  test_memory_recovery.py  test_parser.py  test_pre_compress.py  test_prefetch.py  test_recall.py  test_scoring.py  test_search.py  test_signals.py  test_skills_audit_ingest.py  test_skills_export.py  test_skills_update_cmd.py  test_store.py  test_upgrade_cmd.py  test_vivid_entries.py  test_watch.py  test_wrap_lock.py
tests/fixtures/: session_auth_debug.md  session_vivid_mixed.md
tests/test_dashboard/: conftest.py  test_consolidation_decay.py  (+6 more)
(+118 files in other folders)
